--- a/content/post/2018-02-12-so-you-ve-been-asked-to-make-a-reprex.Rmd
+++ b/content/post/2018-02-12-so-you-ve-been-asked-to-make-a-reprex.Rmd
@@ -22,10 +22,13 @@ If you've found yourself here, you've probably been asked to create a **re**prod
 ## A brief reprex "how to"
 1. Install and load the `reprex` package
 2. Highlight the code *and associated packages*, as indicated by `library(package_name)`**, like so:
+<img src="../../img/highlighted_reprex_code.png" alt="highlighted code and package used to create a reprex" />
 ![Highlighted code and package used to create a reprex](/Users/jessemostipak/Documents/jessemaegan/static/img/highlighted_reprex_code.png)
 3. Copy the highlighted code by pressing Ctrl + Enter/Cmd + Enter
 4. In the [console](http://r4ds.had.co.nz/workflow-scripts.html) type `reprex()` and hit Enter/Return
 5. Everything that you need to post a reprex is now automatically stored on your clipboard!   
+
+***
 
 ## Posting to community.rstudio.com  
 Remember that as soon as you run `reprex()` in the console, everything you need to share your reprex has been stored on your clipboard, and you do not need to take any additional steps to getting a reprex ready for posting!
@@ -33,6 +36,7 @@ Remember that as soon as you run `reprex()` in the console, everything you need 
 Navigate to [community.rstudio.com](https://community.rstudio.com/) and create a new post. Paste (Ctrl + v/Cmd + v) your reprex into the posting box on the left and add any necessary commentary to help community members answer your question, like so:
 ![Example reprex post using a ggplot2 example](/Users/jessemostipak/Documents/jessemaegan/static/img/ggplot2_reprex_image.png)
 
+***
 
 ## Why you should reprex
 Writing a reprex for the problem you're encountering is one of the best ways to demonstrate that you are being considerate of the people who are going to help you solve the error(s) in your code. You don't *have* to write a reprex, but when you do, you're saying "I'm having trouble with something, and I want to demonstrate that I value your time and expertise by creating a reprex. I know that creating a reprex will make it a little bit easier for you to help me, and I want to help you help me."  
@@ -50,9 +54,13 @@ Reprexes are significantly easier to read, as well as copy and paste. This means
 This means they're going to have more time to do one thing:
 **help you**
 
+***
+
 ## Still not convinced a reprex is necessary?
 No one can force you to make a reprex, but they can decide not to answer your question when you don't provide a reprex.  
 
 Imagine that you've made a cake, and for some reason it's turned out absolutely awful - we're talking completely inedible. Asking a question *without* a reprex is like asking, "Why didn't my cake turn out right?" -- there are hundreds of possible answers to that question, and it's going to take a long time to narrow in on the exact cause for your inedible cake creation.  
 
-Asking a question *with* a reprex is like asking, "My cake didn't turn out, and here's the recipe I used and the steps that I followed. Where did I go wrong?"  
+Asking a question *with* a reprex is like asking, "My cake didn't turn out, and here's the recipe I used and the steps that I followed. Where did I go wrong?" Using this method is going to significantly increase the likelihood of you getting a helpful response, faster!
+
+***
