--- a/content/post/2018-02-12-so-you-ve-been-asked-to-make-a-reprex.Rmd
+++ b/content/post/2018-02-12-so-you-ve-been-asked-to-make-a-reprex.Rmd
@@ -26,7 +26,7 @@ If you've found yourself here, you've probably been asked to create a **re**prod
 2. Highlight the code *and associated packages*, as indicated by `library(package_name)`, like so:
 ![Highlighted code and package used to create a reprex](/Users/jessemostipak/Documents/jessemaegan/static/img/highlighted_reprex_code.png)
 \ 
-3. Copy the highlighted code by pressing Ctrl + Enter/Cmd + Enter
+3. Copy the highlighted code by pressing Ctrl/Cmd + c
 4. In the [console](http://r4ds.had.co.nz/workflow-scripts.html) type `reprex()` and hit Enter/Return
 5. Everything that you need to post a reprex is now automatically stored on your clipboard!   
 
@@ -35,7 +35,7 @@ If you've found yourself here, you've probably been asked to create a **re**prod
 ## Posting to community.rstudio.com  
 Remember that as soon as you run `reprex()` in the console, everything you need to share your reprex has been stored on your clipboard, and you do not need to take any additional steps to getting a reprex ready for posting!
 
-Navigate to [community.rstudio.com](https://community.rstudio.com/) and create a new post. Within the text editor, paste (Ctrl + v/Cmd + v) your reprex output (which has already been stored on your clipboard) and add any necessary commentary to help community members answer your question, as follows:
+Navigate to [community.rstudio.com](https://community.rstudio.com/) and create a new post. Within the text editor, paste (Ctrl/Cmd + v) your reprex output (which has already been stored on your clipboard) and add any necessary commentary to help community members answer your question, as follows:
 ![Example reprex post using a ggplot2 example](/Users/jessemostipak/Documents/jessemaegan/static/img/ggplot2_reprex_image.png)
 
 ***
