--- a/content/post/2017-08-20-join-the-r-for-data-science-online-learning-community.Rmd
+++ b/content/post/2017-08-20-join-the-r-for-data-science-online-learning-community.Rmd
@@ -64,4 +64,4 @@ There are two main roles within this online community - that of a learner, and t
   + Install necessary software on your machine.
 
 #### Update
-This version of the R for Data Science online learning community is now closed.
+This version of the R for Data Science online learning community is now closed. You can learn more about the next iteration [here](https://www.jessemaegan.com/post/r4ds-the-next-iteration/).
