--- a/content/post/2018-02-12-so-you-ve-been-asked-to-make-a-reprex.Rmd
+++ b/content/post/2018-02-12-so-you-ve-been-asked-to-make-a-reprex.Rmd
@@ -24,7 +24,7 @@ If you've found yourself here, you've probably been asked to create a **re**prod
 ## A brief reprex "how to"
 1. [Install the development version of reprex from GitHub](https://github.com/tidyverse/reprex) and then load the `reprex` package
 2. Highlight the code *and associated packages*, as indicated by `library(package_name)`, like so:
-![Highlighted code and package used to create a reprex](/Users/jessemostipak/Documents/jessemaegan/static/img/highlighted_reprex_code.png)
+![Highlighted code and package used to create a reprex](/Users/jessemostipak/Documents/jessemaegan/public/img/highlighted_reprex_code.png)
 \ 
 3. Copy the highlighted code by pressing Ctrl/Cmd + c
 4. In the [console](http://r4ds.had.co.nz/workflow-scripts.html) type `reprex()` and hit Enter/Return
@@ -36,7 +36,7 @@ If you've found yourself here, you've probably been asked to create a **re**prod
 Remember that as soon as you run `reprex()` in the console, everything you need to share your reprex has been stored on your clipboard, and you do not need to take any additional steps to getting a reprex ready for posting!
 
 Navigate to [community.rstudio.com](https://community.rstudio.com/) and create a new post. Within the text editor, paste (Ctrl/Cmd + v) your reprex output (which has already been stored on your clipboard) and add any necessary commentary to help community members answer your question, as follows:
-![Example reprex post using a ggplot2 example](/Users/jessemostipak/Documents/jessemaegan/static/img/ggplot2_reprex_image.png)
+![Example reprex post using a ggplot2 example](/Users/jessemostipak/Documents/jessemaegan/public/img/ggplot2_reprex_image.png)
 
 ***
 
@@ -49,9 +49,9 @@ Reprexes are significantly easier to read, as well as copy and paste. This means
 2. Trying to replicate the exact error(s) you're dealing with  
 3. Interpreting a jumble of non-formatted code  
 
-![non-formatted R code](/Users/jessemostipak/Documents/jessemaegan/static/img/non_reprex.png)
+![non-formatted R code](/Users/jessemostipak/Documents/jessemaegan/public/img/non_reprex.png)
 
-![R code formatted using reprex()](/Users/jessemostipak/Documents/jessemaegan/static/img/reprex.png)
+![R code formatted using reprex()](/Users/jessemostipak/Documents/jessemaegan/public/img/reprex.png)
 
 This means they're going to have more time to do one thing:
 **help you**
@@ -61,8 +61,34 @@ This means they're going to have more time to do one thing:
 ## Still not convinced a reprex is necessary?
 No one can force you to make a reprex, but they can decide not to answer your question when you don't provide a reprex.  
 
+### The cake analogy
+_Thanks to [Larie](https://twitter.com/lariebyrd) for this one!_  
+
 Imagine that you've made a cake, and for some reason it's turned out absolutely awful - we're talking completely inedible. Asking a question *without* a reprex is like asking, "Why didn't my cake turn out right?" -- there are hundreds of possible answers to that question, and it's going to take a long time to narrow in on the exact cause for your inedible cake creation.  
 
 Asking a question *with* a reprex is like asking, "My cake didn't turn out, and here's the recipe I used and the steps that I followed. Where did I go wrong?" Using this method is going to significantly increase the likelihood of you getting a helpful response, faster!
 
+### The lost at sea analogy
+_Thanks to [Charlotte](https://twitter.com/CVWickham) for this one!_  
+
+ "If you are marooned on a desert island, it's like the difference between putting SOS on your message in a bottle, and putting SOS _and_ your GPS coordinates on your message in a bottle."
+
+### [Additional analogies](https://twitter.com/kierisi/status/963191049060528129)  
+
 ***
+
+## So this post didn't answer _all_ of your reprex questions?
+* [What to do if your reprex() requires data](https://community.rstudio.com/t/best-practices-how-to-prepare-your-own-data-for-use-in-a-reprex-if-you-can-t-or-don-t-know-how-to-reproduce-a-problem-with-a-built-in-dataset/5346)  
+
+And a million thanks to [Mara](https://twitter.com/dataandme) for collecting all the reprex and question-asking resources you could ever need:  
+
+* [reprex](http://reprex.tidyverse.org/)
+* [reprex GitHub](https://github.com/tidyverse/reprex)
+* [The Minimal Reproducible Example Paradox](https://yihui.name/en/2017/09/the-minimal-reprex-paradox/) by Yihui Xie
+* [tidyverse help: reprex](https://www.tidyverse.org/help/#reprex)
+* [rOpenSci community call](https://vimeo.com/208749032) this video starts talking reprex at approximately 10:30
+* [Help me help you](https://speakerdeck.com/jennybc/reprex-help-me-help-you) slide deck by Jenny Bryan
+* [Magic Reprex](http://www.njtierney.com/post/2017/01/11/magic-reprex/) by Nick Tierney
+* [StackOverflow: How to make a great R reproducible example? aka MCVE](https://stackoverflow.com/questions/5963269/how-to-make-a-great-r-reproducible-example)
+* [Three tips for posting good questions to R-help and Stack Overflow](https://www.r-bloggers.com/three-tips-for-posting-good-questions-to-r-help-and-stack-overflow/)
+* [The R Inferno, Circle 9: Unhelpfully Seeking Help](http://www.burns-stat.com/pages/Tutor/R_inferno.pdf)
