--- a/content/post/2018-02-12-so-you-ve-been-asked-to-make-a-reprex.Rmd
+++ b/content/post/2018-02-12-so-you-ve-been-asked-to-make-a-reprex.Rmd
@@ -49,9 +49,9 @@ Reprexes are significantly easier to read, as well as copy and paste. This means
 2. Trying to replicate the exact error(s) you're dealing with  
 3. Interpreting a jumble of non-formatted code  
 
-![non-formatted R code](https://i.imgur.com/J7NHG50.png)
+![_non-formatted R code (above) vs. formatted R code (below)_](https://i.imgur.com/J7NHG50.png)
 
-![R code formatted using reprex()](https://i.imgur.com/9on3dSC.png)
+![](https://i.imgur.com/9on3dSC.png)
 
 This means they're going to have more time to do one thing:
 **help you**
