--- a/content/post/2018-02-26-gif-it-getting-gifs-in-blogdown.Rmd
+++ b/content/post/2018-02-26-gif-it-getting-gifs-in-blogdown.Rmd
@@ -24,7 +24,9 @@ Blogdown is an amazing tool for - _wait for it_ - blogging. I recently made the 
 ## You said there would be GIFs
 If you know me, you know that I love to communicate using GIFs. So naturally one of the first things I looked into was how to use GIFs with blogdown, which resulted in finding [this post](https://blogdown-demo.rbind.io/2018/01/31/gif-animations/).  
 
-There's nothing wrong with this method, but it's a bit too technical for my needs, because really when I say GIF I'm referring to internet memes and not some amazingly useful and helpful [ggplot2](http://ggplot2.tidyverse.org/)-generated graph.  
+~~There's nothing wrong with this method, but it's a bit too technical for my needs, because really when I say GIF I'm referring to internet memes and not some amazingly useful and helpful [ggplot2](http://ggplot2.tidyverse.org/)-generated graph.~~  
+
+_Edit: after writing this post, the blogdown reference post linked above was updated to include the methods outlined in this post._
 
 ### What you need
 * an [imgur](https://imgur.com/) account (see the 'Updates' section below to bypass imgur)
