slight wording change

--- a/content/post/2018-04-04-kaggle-panel-recap-my-data-science-journey.Rmd
+++ b/content/post/2018-04-04-kaggle-panel-recap-my-data-science-journey.Rmd
@@ -48,7 +48,7 @@ I completed the interview process - which consisted of a lot of Googling and try
 I don't recall ever making a conscientious decision to specialize in a given field, but rather relied on what I knew and was passionate about to dictate where I was practicing data science. While I started out in gaming, I eventually transitioned to non-profit work first with the Girl Scouts and later with Teaching Trust.  
 
 ### What were the most difficult challenges you faced when building a data science career?  
-This would be the logical place to say [imposter syndrome](https://en.wikipedia.org/wiki/Impostor_syndrome), but it would be disingenuous. I don't suffer from imposter syndrome, and while I can empathize with those who grapple with it, it's not something that I've personally experienced. I spend a lot of time reflecting on my knowledge base, and am acutely aware of what I know and what I don't know, and I have always been upfront and honest in the hiring process about my skills and abilities. In fact I was once offered a job doing work in Python, even after telling the interviewer that I didn't know Python but instead worked in R. (They said that as long as I learned Python they had no concerns, although ultimately I turned the job down.)  
+This would be the logical place to say [imposter syndrome](https://en.wikipedia.org/wiki/Impostor_syndrome), but it would be disingenuous. I don't suffer from imposter syndrome, and while I can empathize with those who grapple with it, it's not something that I've personally experienced. I spend a lot of time reflecting on my knowledge base, and am acutely aware of what I know and what I don't know, and I have always been upfront and honest in the hiring process about my skills and abilities. Fun fact: I was once offered a job doing work in Python, even after telling the interviewer that I didn't know Python but instead worked in R. (They said that as long as I learned Python they had no concerns, although ultimately I turned the job down.)  
 
 From a personal perspective I struggle with the overwhelming growth of content and technologies in data science. It's easy to look at everything you still have to learn and feel defeated before you even get started. I've found it helpful to mitigate this by doing two things: 
 
